Dockerized the application

--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,10 @@
     <h1>USING WEBPACK!</h1>
 
     <img src="" id="img1" alt="another missing image" />
+    <script
+      src="https://code.jquery.com/jquery-3.1.0.js"
+      integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk="
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
